Fix the mountain image layout
The image of the mountain has been tricky to get
under control so that it fits properly as a flex item.
The next challenge is sorting out the text to the
left of the image and get it to stop breaking the page
and overflowing the parent flexbox structure.

--- a/app.css
+++ b/app.css
@@ -44,13 +44,21 @@ body {
 /* MAIN SECTION  */
 
 
+.top-container {
+    display: flex;
+    padding: 40px 15% 40px 15%;
+    background-color: #1f2937;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    gap: 5%;
+}
 
 .top-container h1 {
     margin: 0;
     font-size: 48px;
     font-weight: 800;
     color: #f9faf8;
-    text-wrap: wrap;
+    /* text-wrap: wrap; */
     /* overflow: clip; */
     /* min-height: 0; */
 }
@@ -60,45 +68,35 @@ body {
     color: #e5e7eb;
     /* min-width: 0; */
     /* color for arrangement context */
-    /* background-color: #df63c6; */
+    background-color: #df63c6;
 }
 
 .main-title {
     /* box-sizing: border-box; */
-    width: 50%;
-    height: 240px;
-    padding-right: 5%;
+    /* width: 50%; */
+    /* height: 240px; */
+    /* padding-right: 5%; */
     /* color for arrangement context */
-    /* background-color: purple; */
+    background-color: purple;
 }
 
 .main-image-container {
-    /* height: 100%; */
-    /* box-sizing: border-box; */
-    width: 50%;
-    padding-left: 5%;
     /* color for arrangement context */
-    /* background-color: #3882f6; */
+    width: 100%;
+    height: 240px;
+    /* color for arrangement context */
+    /* background-color: #ff0000; */
     /* overflow: hidden; */
 }
 
 .main-image {
-
-    width: 100%;
+    flex-grow: 1;
     height: 100%;
+    width: 100%;
     object-fit: cover;
     object-position: 50% 70%;
-}
-
-.top-container {
-    /* box-sizing: border-box; */
-    max-height: 240px;
-    padding: 50px 15% 50px;
-    background-color: #1f2937;
-    display: flex;
-    /* flex-direction: row; */
     /* color for arrangement context */
-    /* background-color: rgba(128, 0, 128, 0.402); */
+    /* background-color: #ff00ea; */
 }
 
 .cta-button-1 {
@@ -117,11 +115,12 @@ body {
 
 
 section h2 {
+    margin: 0;
     text-align: center;
     font-size: 36px;
     font-weight: 800;
     color: #1f2937;
-    padding: 0px 150px 0px;
+    padding: 40px 150px 40px;
 }
 
 .mid-container {
@@ -130,7 +129,6 @@ section h2 {
     justify-content: center;
     flex-wrap: wrap;
     gap: 40px;
-    /* align-content: center; */
     /* color for arrangement context */
     /* background-color: rgba(255, 0, 255, 0.321); */
 }
